--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "dogbook",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "3",
+    "jquery": "^3.4.1"
+  }
 }
